# OTUS_Prof_DZ_08

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  bayan.cpp
.github/workflows/: Bayan.yml
Hash_func/: crc32.h  md5.cpp
hashFunc/: crc32.h  md5.h
headers/: DuplicateSearch.h  FileParser.h  FileReader.h  FileScaner.h  bayan.h
src/: DuplicateSearch.cpp  FileParser.cpp  FileReader.cpp  FileScaner.cpp
test/: bayan_gtest.cpp
